--- a/mysite/polls/templates/polls/base.html
+++ b/mysite/polls/templates/polls/base.html
@@ -12,8 +12,11 @@
         {% block index %}
         {% endblock %}
 
+        {% block choices %}
+        {% endblock %}
+
         {% block correct_answer %}
-        {% endblock%}
+        {% endblock %}
         
 
     </body>
