--- a/mysite/polls/templates/polls/base.html
+++ b/mysite/polls/templates/polls/base.html
@@ -31,5 +31,8 @@
         {% block correct_answer %}
         {% endblock %}
 
+        {% block results %}
+        {% endblock %}
+
     </body>
 </html>
