--- a/mysite/autos/templates/autos/auto_form.html
+++ b/mysite/autos/templates/autos/auto_form.html
@@ -1,7 +1,7 @@
 {% extends "base_bootstrap.html" %}
 
 {% block content %}
-  <form action="" method="post">
+  <form action="" method="POST">
     {% csrf_token %}
     <table>
     {{ form.as_table }}
