--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -1,7 +1,7 @@
-
 <!--this list and links should be somewhere in the template-->
 <ul>
-<li><p><a href="/polls">A Polls Application</a></p></li>
-<li><p><a href="/hello">Test the session</a></p></li>
-<li><a href="/autos">Autos CRUD</a></li>
+<li><p><a href="/polls">a polls application</a></p></li>
+<li><p><a href="/hello">test the session</a></p></li>
+<li><a href="/autos">autos crud</a></li>
 </ul>
+<p>Hello World</p>
