--- a/mysite/home/templates/base_bootstrap.html
+++ b/mysite/home/templates/base_bootstrap.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!-- Edit dj4e-samples/settings.py and add APP_NAME = 'DJ4E Samples' or similar -->
-<title>{% block title %}{{ settings.home }}{% endblock %}</title>
+<title>{% block title %}{{ settings.APP_NAME }}{% endblock %}</title>
 
 <!-- Replace this value (42-42) with the one provided by the autograder -->
 <meta name="dj4e" content="11808b3e0b43d041c106bd845dd04e7b">
