Add migrations and cats/urls

--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -1,8 +1,9 @@
 <!--this list and links should be somewhere in the template-->
 <ul>
-<li><p><a href="/polls">a polls application</a></p></li>
-<li><p><a href="/hello">test the session</a></p></li>
-<li><a href="/autos">autos crud</a></li>
+<li><p><a href="/polls">A polls application</a></p></li>
+<li><p><a href="/hello">Test the session</a></p></li>
+<li><a href="/autos">Autos CRUD</a></li>
+<li><a href="/cats">Cats CRUD</a></li>
 </ul>
 <p>Hello World</p>
 {% if user.is_authenticated %}
