--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -1,21 +1,7 @@
-<!--this list and links should be somewhere in the template-->
-<ul>
-<li><p><a href="/polls">A polls application</a></p></li>
-<li><p><a href="/hello">Test the session</a></p></li>
-<li><a href="/autos">Autos CRUD</a></li>
-<li><a href="/cats">Cats CRUD</a></li>
-</ul>
-<p>Hello World</p>
-{% if user.is_authenticated %}
-<p>Authenticated as
-<pre>
-Name: {{ user.get_full_name }}
-Email: {{ user.email }}
-ID: {{ user.id }}
-</pre>
-</p>
-<p>You can <a href="{% url 'logout' %}?next={{ request.path }}">logout</a></p>
-{% else %}
-<p>You are not logged in.</p>
-<p>You can <a href="{% url 'login' %}?next={{ request.path }}">login</a> if you like.
-{% endif %}
+{% extends "base_bootstrap.html" %}
+{% block content %}
+    <h1>Welcome to {{ settings.APP_NAME }}</h1>
+    <p>
+    Hello world.
+    </p>
+{% endblock content %}
