--- a/mysite/ads/templates/ads/ad_detail.html
+++ b/mysite/ads/templates/ads/ad_detail.html
@@ -1,4 +1,4 @@
-{% extends "base_bootstrap.html" %}
+{% extends "base_menu.html" %}
 {% load humanize %} <!-- https://docs.djangoproject.com/en/4.2/ref/contrib/humanize -->
 {% block content %}
 <span style="float: right;">
