add social login, remove site.webmanifest

--- a/mysite/home/templates/base_bootstrap.html
+++ b/mysite/home/templates/base_bootstrap.html
@@ -6,7 +6,7 @@
 <title>{% block title %}{{ settings.APP_NAME }}{% endblock %}</title>
 
 <!-- Replace this value (42-42) with the one provided by the autograder -->
-<meta name="dj4e" content="42-42">
+<meta name="dj4e" content="11808b3e0b43d041c106bd845dd04e7b">
 
 <meta name="dj4e-code" content="42172389760938">
 
@@ -27,8 +27,6 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-
-<link rel="manifest" href="/site.webmanifest">
 
 {% block head %} {% endblock %}
 
