--- a/mysite/home/templates/base_menu.html
+++ b/mysite/home/templates/base_menu.html
@@ -7,7 +7,7 @@
     <ul class="navbar-nav">
       {% url 'ads:all' as x %}
       <li {% if request.get_full_path == x %}class="active"{% endif %}>
-          <a class="nav-link" href="{% url 'ads:all' %}" role="button">Ads</a></li>
+          <a class="nav-link" href="{% url 'ads:all' %}" role="button">All Ads</a></li>
     </ul>
     <ul class="navbar-nav">
       {% if user.is_authenticated %}
