--- a/mysite/ads/templates/ads/ad_confirm_delete.html
+++ b/mysite/ads/templates/ads/ad_confirm_delete.html
@@ -6,6 +6,7 @@
 
 <form action="" method="POST">
   {% csrf_token %}
-  <input type="submit" value="Yes, delete.">
+  <input type="submit" class="btn btn-primary" value="Yes, delete.">
+  <input type="submit" class="btn btn-secondary" value="Cancel" onclick="window.location.href='{% url 'ads:all' %}';return false;">
 </form>
 {% endblock %}
