--- a/mysite/ads/templates/ads/ad_form.html
+++ b/mysite/ads/templates/ads/ad_form.html
@@ -5,8 +5,8 @@
   <form action="" method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <input type="submit" value="Submit">
-    <input type="submit" value="Cancel" onclick="window.location.href='{% url 'ads:all' %}';return false;">
+    <input type="submit" class="btn btn-primary" value="Submit">
+    <input type="submit" class="btn btn-secondary" value="Cancel" onclick="window.location.href='{% url 'ads:all' %}';return false;">
   </form>
 </p>
 {% endblock %}
