--- a/mysite/ads/templates/ads/ad_detail.html
+++ b/mysite/ads/templates/ads/ad_detail.html
@@ -17,7 +17,7 @@
 {% block content %}
 {% if ad.content_type %}
 <div id="overlay" class="overlay" style="text-align: center;"
-    onclick="document.getElementById('overlay').style.display = 'none;">
+    onclick="document.getElementById('overlay').style.display = 'none';">
 <img style="width: 90%; margin-top: 50px; border: 3px solid black;" src="{% url 'ads:ad_picture' ad.id %}">
 </div>
 {% endif %}
