--- a/mysite/ads/templates/ads/ad_detail.html
+++ b/mysite/ads/templates/ads/ad_detail.html
@@ -21,25 +21,46 @@
 <img style="width: 90%; margin-top: 50px; border: 3px solid black;" src="{% url 'ads:ad_picture' ad.id %}">
 </div>
 {% endif %}
-<span style="float: right;">
-({{ ad.updated_at|naturaltime }})
+<h1>
 {% if ad.owner == user %}
-<a href="{% url 'ads:ad_update' ad.id %}"><i class="fa fa-pencil"></i></a>
-<a href="{% url 'ads:ad_delete' ad.id %}"><i class="fa fa-trash"></i></a>
-{% endif %}
+<span style="float: right;">
+    <a href="{% url 'ads:ad_update' ad.id %}"><i class="fa fa-pencil"></i></a>
+    <a href="{% url 'ads:ad_delete' ad.id %}"><i class="fa fa-trash"></i></a>
 </span>
-<h1>{{ ad.title }}</h1>
+{% endif %}
+{{ ad.title }}
+</h1>
 {% if ad.content_type %}
 <img style="float: right; max-width: 50%;" src="{% url 'ads:ad_picture' ad.id %}"
-    onclick="document.getElementById('overlay').style.display='block';">
+onclick="document.getElementById('overlay').style.display='block';">
 {% endif %}
 <p>
-{{ ad.text }}
+    {{ ad.text }}
 </p>
 <p>
-Price: ${{ ad.price }}
+    Price: ${{ ad.price }}
 </p>
 <p>
-<a href="{% url 'ads:all' %}">All ads</a>
+({{ ad.updated_at|naturaltime }})
 </p>
+{% if user.is_authenticated %}
+<br clear="all"/>
+<p>
+{% load crispy_forms_tags %}
+<form method="post" action="{% url 'ads:ad_comment_create' ad.id %}">
+    {% csrf_token %}
+    {{ comment_form|crispy }}
+<input type="submit" value="Submit">
+<input type="submit" value="All Ads" onclick="window.location.href='{% url 'ads:all' %}'; return false;">
+</form>
+</p>
+{% endif %}
+{% for comment in comments %}
+<p> {{ comment.text }}
+({{ comment.updated_at|naturaltime }})
+{% if user == comment.owner %}
+<a href="{% url 'ads:ads_comment_delete' comment.id %}"><i class= "fa fa-trash"></i></a>
+{% endif %}
+</p>
+{% endif %}
 {% endblock %}
