--- a/mysite/ads/templates/ads/ad_list.html
+++ b/mysite/ads/templates/ads/ad_list.html
@@ -1,16 +1,28 @@
 {% extends "base_menu.html" %}
 {% block content %}
-<h1>Ads 1.0 + Pictures</h1>
+<h1>Favourite Ads</h1>
 <p>
 {% if ad_list %}
 <ul>
   {% for ad in ad_list %}
     <li>
-        <a href="{% url 'ads:ad_detail'  ad.id %}">{{ ad.title }}</a>
-        {% if ad.owner == user %}
-        (<a href="{% url 'ads:ad_update' ad.id %}">Edit</a> |
-        <a href="{% url 'ads:ad_delete' ad.id %}">Delete</a>)
-        {% endif %}
+      <a href="{% url 'ads:ad_detail' ad.id %}">{{ ad.title }}</a>
+      {% if ad.owner_id == user.id %}
+      (<a href="{% url 'ads:ad_update' ad.id %}">Edit</a> |
+      <a href="{% url 'ads:ad_delete' ad.id %}">Delete</a>)
+      {% endif %}
+      {% if user.is_authenticated %}
+      <!-- Two hrefs with two stacked icons each - one showing and one hidden -->
+      <a href="#" onclick=
+            "favPost('{% url 'favs:ad_unfavourite' ad.id %}', {{ ad.id }});return false;"
+            {% if ad.id not in favourites %} style="display: none;" {% endif %}
+            id="favourite_star_{{ad.id}}">
+      <span class="fa-stack" style="vertical-align: middle;">
+      <i class="fa fa-star fa-stack-1x" style="color: orange;"></i>
+      <i class="fa fa-star-o fa-stack-1x"></i>
+      </span>
+      </a>
+      {% endif %}
     </li>
   {% endfor %}
 </ul>
@@ -18,4 +30,43 @@
   <p>There are no ads in the database.</p>
 {% endif %}
 </p>
+<p>
+<a href="{% url 'ads:ad_create' %}">Add an Ad</a> |
+{% if user.is_authenticated %}
+<a href="{% url 'logout' %}?next={% url 'ads:all' %}">Logout</a>
+{% else %}
+<a href="{% url 'login' %}?next={%url 'ads:all' %}">Login</a>
+{% endif %}
+</p>
+<script>
+function toggleInlineDisplay(star_id) {
+  var elem = document.getElementById(star_id);
+  if (window.getComputedStyle(elem).display == "inline") {
+    elem.style.display = 'none';
+    elem.dataset.previousDisplay = 'inline';
+  } else if (window.getComputedStyle(elem).display == "block") {
+    elem.style.display = 'none';
+    elem.dataset.previousDisplay = 'block';
+  } else {
+    console.log('prev', elem.dataset.previousDisplay);
+    if (typeof elem.dataset.previousDisplay == 'string') {
+      elem.style.display = elem.dataset.previousDisplay
+    } else {
+      elem.style.display = 'inline';
+    }
+  }
+}
+
+function favPost(url, ad_id) {
+  console.log('POSTing to', url);
+  fetch(url, { method: 'POST', body: '{}' })
+  .then((response) => {
+    console.log(url, 'finished');
+    toggleInlineDisplay(`unfavourite_star_${ad_id}`);
+    toggleInlineDisplay(`favourite_star_${ad_id}`);
+  }).catch((error) => {
+    alert(`URL failed with ${error} ${url}`)
+  });
+}
+</script>
 {% endblock %}
