fix star display typos

--- a/mysite/ads/templates/ads/ad_list.html
+++ b/mysite/ads/templates/ads/ad_list.html
@@ -25,10 +25,10 @@
       <!-- the second href -->
       <a href="#" onclick=
             "favPost('{% url 'ads:ad_favourite' ad.id %}', {{ ad.id }});return false;"
-            {% if ad.id not in favourites %} style="display: none;" {% endif %}
-            id="favourite_star_{{ad.id}}">
+            {% if ad.id in favourites %} style="display: none;" {% endif %}
+            id="unfavourite_star_{{ad.id}}">
       <span class="fa-stack" style="vertical-align: middle;">
-      <i class="fa fa-star fa-stack-1x" style="color: orange;"></i>
+      <i class="fa fa-star fa-stack-1x" style="display: none; color: orange;"></i>
       <i class="fa fa-star-o fa-stack-1x"></i>
       </span>
       </a>
